--- a/scraper/package.json
+++ b/scraper/package.json
@@ -18,7 +18,8 @@
 	"icalendar": "0.7.1",
     "turf": "2.0.0",
     "paper": "0.9.25",
-    "ent": "2.2.0"
+    "ent": "2.2.0",
+    "html-to-text": "2.1.3"
   },
   "engines": {
     "node": "0.10.21"
