--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"cradle": ">= 0.6.6",
 		"express": ">= 3.4.0",
-		"colors": ">= 0.6.2"
+		"colors": ">= 0.6.2",
+		"compression": ">= 1.5.1"
 	},
 	"engines": {
 		"node": "0.10.21"
