--- a/scraper/package.json
+++ b/scraper/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "md5": "2.2.1",
     "async": "0.9.0",
-    "cheerio": "0.18.0",
+		"cheerio": "0.22.0",
     "colors": "^1.1.2",
     "cradle": "0.6.7",
     "csv-parse": "0.0.6",
@@ -15,11 +15,12 @@
     "icalendar": "0.7.1",
     "moment": "2.2.1",
     "scrapyard": "0.0.8",
-	"icalendar": "0.7.1",
+		"icalendar": "0.7.1",
     "turf": "2.0.0",
     "paper": "0.9.25",
     "ent": "2.2.0",
-    "html-to-text": "2.1.3"
+    "html-to-text": "2.1.3",
+		"request": " 2.81.0"
   },
   "engines": {
     "node": "0.10.21"
