--- a/scraper/.eslintrc.json
+++ b/scraper/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "no-trailing-spaces": ["error", { "skipBlankLines": true }],
+        "no-underscore-dangle": ["error", { "allowAfterThis": true }]
+    }
 }
