--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,6 +5,7 @@
   "description": "retrieve and convert dumps from various conferences to importable json",
   "dependencies": {
     "async": "0.9.0",
+    "canvas": "^1.6.3",
     "cheerio": "0.22.0",
     "colors": "^1.1.2",
     "cradle": "0.6.7",
