--- a/scraper/package.json
+++ b/scraper/package.json
@@ -10,6 +10,7 @@
     "csv-parse": "2.4.0",
     "ent": "2.2.0",
     "eslint": "^4.19.1",
+    "fs-extra": "^7.0.1",
     "html-to-text": "2.1.3",
     "ical": "0.3.1",
     "icalendar": "0.7.1",
